@@ -1,0 +1,34 @@
+Before
+Event 11 ================================================================
+commit refs/heads/master
+#legacy-id 5
+mark :10
+committer esr <esr> 1324319862 +0000
+data 148
+Directory copy to branch.
+
+The command that produced this was:
+
+svn copy file://${PWD}/test-repo/trunk/foo file://${PWD}/test-repo/branches/foocopy
+from :9
+M 100644 :4 branches/foocopy/bar/child3
+M 100644 :5 branches/foocopy/child1
+M 100644 :6 branches/foocopy/child2
+
+After
+Event 11 ================================================================
+commit refs/heads/hotcopy
+#legacy-id 5
+mark :10
+committer esr <esr> 1324319862 +0000
+data 148
+Directory copy to branch.
+
+The command that produced this was:
+
+svn copy file://${PWD}/test-repo/trunk/foo file://${PWD}/test-repo/branches/foocopy
+from :9
+M 100644 :4 bar/child3
+M 100644 :5 child1
+M 100644 :6 child2
+
